# ot-harjoitustyo

./: .gitignore  README.md  Untitled Diagram.drawio  teht1vk3
2048-peli/: .pylintrc  README.md  pyproject.toml  tasks.py
2048-peli/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testausdokumentti.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
2048-peli/src/: ending.py  gamecolours.py  grid.py  griddrawing.py  handle_highscore.py  initialize_database.py  main.py  matrix.py  start.py  user.py
2048-peli/src/data/: database.sqlite  highscore_func.py  initialize_database.py
2048-peli/src/services/: matrix.py
2048-peli/src/tests/: gamecolours_test.py  grid_test.py  griddrawing_test.py  handle_highscore_test.py  matrix_test.py
2048-peli/src/ui/: ending.py  grid.py  start.py  won.py
dokumentaatio/: vaatimusmaarittely.md
laskarit/ohjelma/: .gitignore  README.md  pyproject.toml  tasks.py
laskarit/ohjelma/dokumentaatio/: tyoaikakirjanpito.md
laskarit/ohjelma/src/: grid.py  liikkeet.py  main.py  ruudukko.py
laskarit/ohjelma/src/entities/: cube.py
laskarit/ohjelma/src/entities.py/: cube.py
laskarit/ohjelma/src/tests/: cube_test.py  grid_test.py
laskarit/ohjelma/src/tests.py/: testcube.py
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko1/dokumentaatio/: Tyoaikakirjanpito  tyoaikakirjanpito  vaatimusmaarittely.md
laskarit/viikko2/: 100testikattavuus  testikattavuus.md
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko3/: teht1vk3
(+4 files in other folders)
